# akamai-wrapper-pub

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
docs/: CHANGELOG.md  DEVELOPMENT.md
scripts/: smoke_test.sh
src/akamai_wrapper_pub/: __init__.py  api.py
src/akamai_wrapper_pub/cli/: __init__.py  account_search.py  group_search.py  list_properties.py  properties_download.py  property_download.py
src/akamai_wrappy/: __init__.py  api.py
src/akamai_wrappy/cli/: account_search.py  common.py  download_clientlists.py  download_networklists.py  group_search.py  list_clientlists.py  list_networklists.py  list_properties.py  main.py  properties_download.py  property_download.py
