[project]
name = "akamai-wrappy"
version = "0.8.0"
description = "Shared Akamai utilities for Python projects"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "edgegrid-python>=2.0.2",
    "requests>=2.32.0",
    "tabulate>=0.9.0",
]

[project.scripts]
awp = "akamai_wrappy.cli.main:main"
search-asw = "akamai_wrappy.cli.account_search:main"
search-group = "akamai_wrappy.cli.group_search:main"
list-properties = "akamai_wrappy.cli.list_properties:main"
download-property = "akamai_wrappy.cli.property_download:main"
download-properties = "akamai_wrappy.cli.properties_download:main"
list-networklists = "akamai_wrappy.cli.list_networklists:main"
download-networklists = "akamai_wrappy.cli.download_networklists:main"
list-clientlists = "akamai_wrappy.cli.list_clientlists:main"
download-clientlists = "akamai_wrappy.cli.download_clientlists:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
