[project]
name = "akamai-wrappy"
version = "0.9.1"
description = "Shared Akamai utilities for Python projects"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "edgegrid-python>=2.0.2",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
awp = "akamai_wrappy.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
